# DFTDataFrame

./: .pre-commit-config.yaml  Adsorbates.ipynb  DFTDataFrame.py  Inputparameters_check.ipynb  README.md  Readingoutputfiles.py  pyproject.toml  requirements.txt
Templates/: Adsorbates.ipynb  Bader_charge.ipynb  Cu_slabs_G  Inputparameters_check.ipynb  Magnetization.ipynb
Templates/.ipynb_checkpoints/: Adsorbates-checkpoint.ipynb
Templates/data/Cu/bulk/: final.traj
Templates/data/Gas/CO/: OUTCAR  final.traj  first.traj  gibbs.e  out.txt  relax.traj1  vib.0y-.pckl  vib.1x+.pckl  vib.1x-.pckl  vib.1y+.pckl  vib.1z-.pckl  vib.xyz
Templates/data/Gas/H2/: OUTCAR  final.e  out.txt  relax.traj  vib.0x-.pckl  vib.1x+.pckl  vib.1y-.pckl  vib.1z+.pckl  vib.eq.pckl  vib.xyz
Templates/data/Gas/H2O/: CONTCAR  gibbs.e  vib.0x+.pckl  vib.0x-.pckl  vib.0y+.pckl  vib.0y-.pckl  vib.1y+.pckl  vib.1y-.pckl  vib.1z-.pckl  vib.2x+.pckl  vib.2x-.pckl  vib.2y-.pckl  vib.2z+.pckl  vib.2z-.pckl  vib.xyz
src/DFTDataFrame/: Tools.py
tests/test_data/Cu/bulk/: CONTCAR  DOS0  DOS1  DOS2  DOS3  DOS4
tests/test_data/Gas/CO/: CONTCAR  DOS0  DOS1  DOS2  EIGENVAL  INCAR  OSZICAR  OUTCAR1  POSCAR  final.e  relax.traj  vib.0x+.pckl  vib.0x-.pckl  vib.0y+.pckl  vib.0z+.pckl  vib.0z-.pckl  vib.1y-.pckl  vib.1z+.pckl  vib.eq.pckl
tests/test_data/Gas/H2/: CONTCAR  DOS0  DOS1  DOS2  INCAR  OSZICAR  POSCAR  first.traj  gibbs.e  vib.0x+.pckl  vib.0y+.pckl  vib.0y-.pckl  vib.0z+.pckl  vib.0z-.pckl  vib.1x-.pckl  vib.1y+.pckl  vib.1z-.pckl
tests/test_data/Gas/H2O/: DOS0  DOS1  DOS2  DOS3  INCAR  (+14 more)
(+107 files in other folders)
